--- a/rstudio_sagemaker.yaml
+++ b/rstudio_sagemaker.yaml
@@ -7,9 +7,8 @@ Parameters:
     Default: t2.medium
     AllowedValues:
       - t2.medium
-      - m1.small
-      - m1.large
-    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
+      - m2.large
+    Description: Enter t2.medium or t2.large. Default is t2.medium.
 
 Mappings:
   Region:
@@ -81,6 +80,11 @@ Resources:
         Ref: InstanceTypeParameter
       ImageId: !FindInMap [Region, !Ref "AWS::Region", HostAmi]
       IamInstanceProfile: !Ref InstanceProfile
+      BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            VolumeSize: '30'
+            Encrypted: 'true'
       SubnetId: !Ref PublicSubnet
       SecurityGroupIds:
         - Ref: PublicSubnetSecurityGroup
